--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,26 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDemo2.cube()[pri:3, instance:tesngScripts.TestNGDemo2@7205765b]">cube</td> 
-  <td>main@252480153</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGDemo2.beforeM()[pri:0, instance:tesngScripts.TestNGDemo2@7205765b]">&gt;&gt;beforeM</td> 
-<td>&nbsp;</td>  <td>main@252480153</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGDemo2.afterC()[pri:0, instance:tesngScripts.TestNGDemo2@7205765b]">&lt;&lt;afterC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@252480153</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDemo2.evenOdd()[pri:2, instance:tesngScripts.TestNGDemo2@7205765b]">evenOdd</td> 
-  <td>main@252480153</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGDemo2.afterM()[pri:0, instance:tesngScripts.TestNGDemo2@7205765b]">&lt;&lt;afterM</td> 
-<td>&nbsp;</td>  <td>main@252480153</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGDemo2.beforeC()[pri:0, instance:tesngScripts.TestNGDemo2@7205765b]">&gt;&gt;beforeC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@252480153</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGDemo2.beforeM()[pri:0, instance:tesngScripts.TestNGDemo2@7205765b]">&gt;&gt;beforeM</td> 
-<td>&nbsp;</td>  <td>main@252480153</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGDemo2.primeDemo()[pri:1, instance:tesngScripts.TestNGDemo2@7205765b]">primeDemo</td> 
-  <td>main@252480153</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGDemo2.afterM()[pri:0, instance:tesngScripts.TestNGDemo2@7205765b]">&lt;&lt;afterM</td> 
-<td>&nbsp;</td>  <td>main@252480153</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestNGDemo2.afterM()[pri:0, instance:tesngScripts.TestNGDemo2@7205765b]">&lt;&lt;afterM</td> 
-<td>&nbsp;</td>  <td>main@252480153</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/02 22:10:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGDemo2.beforeM()[pri:0, instance:tesngScripts.TestNGDemo2@7205765b]">&gt;&gt;beforeM</td> 
-<td>&nbsp;</td>  <td>main@252480153</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/02 15:28:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_07_DemoWebShop_PlaceOrder.placeOrder_DemoWebshop()[pri:0, instance:testcases.TC_07_DemoWebShop_PlaceOrder@793be5ca]">placeOrder_DemoWebshop</td> 
+  <td>main@504053874</td>   <td></td> </tr>
 </table>
