Latest TestNG changes are included

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,29 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\rehan\git\SeleniumLearning</td></tr>
+<tr><td>Orange HRM website is loaded</td></tr>
+<tr><td>Browser window is maximized</td></tr>
+<tr><td>Admin is entered as UserName in a text-box</td></tr>
+<tr><td>Admin@123 is entered as Password in a text-box</td></tr>
+<tr><td>Login button is clicked</td></tr>
+<tr><td>Selected PIM from the available options</td></tr>
+<tr><td>Selected add employee option</td></tr>
+<tr><td>Add Employee modal exists </td></tr>
+<tr><td>Jinny is enered as first name in the text-box</td></tr>
+<tr><td>and is enered as middle name in the text-box</td></tr>
+<tr><td>Georgiais enered as  nalastme in the text-box</td></tr>
+<tr><td>Location dropdown button is clicked</td></tr>
+<tr><td>Number of locations available:28</td></tr>
+<tr><td>Next button is clicked</td></tr>
+<tr><td>Personal details page is displayed</td></tr>
+<tr><td>Entered data in other Id field</td></tr>
+<tr><td>Nationality drop-down is clicked</td></tr>
+<tr><td>Australian is selected as nationality of the employee</td></tr>
+<tr><td>Option under marital status are 4</td></tr>
+<tr><td>marital status drop-down is clicked</td></tr>
+<tr><td>Gender drop-down is clicked</td></tr>
+<tr><td>Gender is selcted as :Male</td></tr>
+<tr><td>Data entered in hobbies field</td></tr>
+<tr><td>Next button is clicked</td></tr>
+<tr><td>Employee details page is displayed</td></tr>
+<tr><td>Exception occurred while finding the element...!!!</td></tr>
+<tr><td>Exception occurred while finding the element...!!!</td></tr>
+</table>
