--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60f79e">  <td>21/09/02 15:28:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_07_DemoWebShop_PlaceOrder.placeOrder_DemoWebshop()[pri:0, instance:testcases.TC_07_DemoWebShop_PlaceOrder@793be5ca]">placeOrder_DemoWebshop</td> 
-  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>21/09/03 21:47:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_AddEmployee.add_Employee()[pri:0, instance:testcases.TC_01_AddEmployee@1a18644]">add_Employee</td> 
+  <td>main@259564670</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>21/09/03 21:47:53</td>   <td>-1354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_AddEmployee.openBrowser()[pri:0, instance:testcases.TC_01_AddEmployee@1a18644]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@259564670</td>   <td></td> </tr>
+<tr bgcolor="e8896b">  <td>21/09/03 21:47:52</td>   <td>-1937</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_AddEmployee.setup()[pri:0, instance:testcases.TC_01_AddEmployee@1a18644]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@259564670</td>   <td></td> </tr>
 </table>
