--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,9 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\rehan\git\SeleniumLearning</td></tr>
+<tr><td>Login button is clicked</td></tr>
+<tr><td>Email Id is entered</td></tr>
+<tr><td>Entered password</td></tr>
+<tr><td>clicked on Login button</td></tr>
+<tr><td>Clicked on email name</td></tr>
+<tr><td>Orders selcted from the options</td></tr>
+<tr><td>Total number of orders placer are:34</td></tr>
+</table>
