--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7194ba">  <td>21/09/14 07:50:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FibonacciDemo.fibonacci()[pri:0, instance:tesngScripts.FibonacciDemo@57af006c]">fibonacci</td> 
-  <td>main@627318073</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/16 18:40:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tc_09_AllOrdersTotal.openBrowser()[pri:0, instance:testcases.Tc_09_AllOrdersTotal@a530d0a]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@651802632</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/16 18:40:39</td>   <td>3892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tc_09_AllOrdersTotal.re_Order()[pri:0, instance:testcases.Tc_09_AllOrdersTotal@a530d0a]">re_Order</td> 
+  <td>main@651802632</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/16 18:40:35</td>   <td>-687</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tc_09_AllOrdersTotal.setup()[pri:0, instance:testcases.Tc_09_AllOrdersTotal@a530d0a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@651802632</td>   <td></td> </tr>
 </table>
