Reorder testcase is implemented

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,23 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<<<<<<< HEAD
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,812</td><td></td><td></td></tr>
-=======
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31</td><td></td><td></td></tr>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,200</td><td></td><td></td></tr>
 </table>
-<<<<<<< HEAD
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.Tc_09_AllOrdersTotal</td><td><a href="#m0">re_Order</a></td><td rowspan="1">1631832039762</td><td rowspan="1">2196</td></tr></tbody>
-=======
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tesngScripts.FactorialDemo</td><td><a href="#m0">cube</a></td><td rowspan="1">1631675955166</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m1">factorial</a></td><td rowspan="1">1631675955172</td><td rowspan="1">0</td></tr></tbody>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.TC_08_ReOrder</td><td><a href="#m0">re_Order</a></td><td rowspan="1">1632103953717</td><td rowspan="1">9386</td></tr></tbody>
 </table>
-<<<<<<< HEAD
-<h2>Default test</h2><h3 id="m0">testcases.Tc_09_AllOrdersTotal#re_Order</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Login button is clicked<br/>Email Id is entered<br/>Entered password<br/>clicked on Login button<br/>Clicked on email name<br/>Orders selcted from the options<br/>Total number of orders placer are:34</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-=======
-<h2>Default test</h2><h3 id="m0">tesngScripts.FactorialDemo#cube</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Cube of the Given number is :729</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tesngScripts.FactorialDemo#factorial</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+<h2>Default test</h2><h3 id="m0">testcases.TC_08_ReOrder#re_Order</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Login button is clicked<br/>Email Id is entered<br/>Entered password<br/>clicked on Login button<br/>Clicked on email name<br/>Orders selcted from the options<br/>Order Number: 1015245<br/>Order Number: 1015241<br/>Order Number: 1015229<br/>Order Number: 1015227<br/>Order Number: 1015218<br/>Order Number: 1015215<br/>Order Number: 1015210<br/>Order Number: 997868<br/>Order Number: 997042<br/>Order Number: 997040<br/>Order details button is clicked<br/>Re-Order button is clicked<br/>Terms of service check-box is checked<br/>Checkout button is clicked<br/>Continue button is clicked agter saving billing information<br/>Continue button is clicked<br/>Shipping method radio button is selected<br/>Continue button clicked after selecting shipping method<br/>Continue buton clicked after selecting payment method<br/>Contine button clicked to save payment information<br/>Confirm button is clicked to confirm order<br/>Order number: 1015634</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
