--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,11 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-<<<<<<< HEAD
-                    <span>C:\Users\rehan\AppData\Local\Temp\testng-eclipse-1087646447\testng-customsuite.xml</span>
-=======
-                    <span>C:\Users\AaradhyaVashisht\AppData\Local\Temp\testng-eclipse-1648034201\testng-customsuite.xml</span>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+                    <span>C:\Users\rehan\AppData\Local\Temp\testng-eclipse-917565816\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -65,11 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-<<<<<<< HEAD
                     <span>0 groups</span>
-=======
-                    <span>2 groups</span>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,11 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-<<<<<<< HEAD
                     <span class="method-stats">1 method,   1 passed</span>
-=======
-                    <span class="method-stats">2 methods,   2 passed</span>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -116,21 +104,9 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-<<<<<<< HEAD
-                        <a href="#" panel-name="suite-Default_suite" title="testcases.Tc_09_AllOrdersTotal" class="method navigator-link" hash-for-method="re_Order">re_Order</a> <!-- method navigator-link -->
-=======
-                        <a href="#" panel-name="suite-Default_suite" title="tesngScripts.FactorialDemo" class="method navigator-link" hash-for-method="cube">cube</a> <!-- method navigator-link -->
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+                        <a href="#" panel-name="suite-Default_suite" title="testcases.TC_08_ReOrder" class="method navigator-link" hash-for-method="re_Order">re_Order</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-<<<<<<< HEAD
-=======
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tesngScripts.FactorialDemo" class="method navigator-link" hash-for-method="factorial">factorial</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
                     </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
@@ -146,46 +122,22 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-<<<<<<< HEAD
-              <span class="class-name">testcases.Tc_09_AllOrdersTotal</span>
-=======
-              <span class="class-name">tesngScripts.FactorialDemo</span>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+              <span class="class-name">testcases.TC_08_ReOrder</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-<<<<<<< HEAD
                   <a name="re_Order">
                   </a> <!-- re_Order -->
                   <span class="method-name">re_Order</span>
-=======
-                  <a name="cube">
-                  </a> <!-- cube -->
-                  <span class="method-name">cube</span>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
                 </div> <!-- method-content -->
               </div> <!-- method -->
-<<<<<<< HEAD
-=======
-              <div class="method">
-                <div class="method-content">
-                  <a name="factorial">
-                  </a> <!-- factorial -->
-                  <span class="method-name">factorial</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-<<<<<<< HEAD
-            <span class="header-content">C:\Users\rehan\AppData\Local\Temp\testng-eclipse-1087646447\testng-customsuite.xml</span>
-=======
-            <span class="header-content">C:\Users\AaradhyaVashisht\AppData\Local\Temp\testng-eclipse-1648034201\testng-customsuite.xml</span>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+            <span class="header-content">C:\Users\rehan\AppData\Local\Temp\testng-eclipse-917565816\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -194,11 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-<<<<<<< HEAD
-      &lt;class name=&quot;testcases.Tc_09_AllOrdersTotal&quot;/&gt;
-=======
-      &lt;class name=&quot;tesngScripts.FactorialDemo&quot;/&gt;
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+      &lt;class name=&quot;testcases.TC_08_ReOrder&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -222,26 +170,6 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">RegressionTest</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">cube</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">factorial</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
-            <div class="test-group">
-              <span class="test-group-name">SanityTest</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">cube</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -258,34 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-<<<<<<< HEAD
 data.addRows(1);
-=======
-data.addRows(2);
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
 data.setCell(0, 0, 0)
-<<<<<<< HEAD
 data.setCell(0, 1, 're_Order')
-data.setCell(0, 2, 'testcases.Tc_09_AllOrdersTotal')
-data.setCell(0, 3, 2196);
-=======
-data.setCell(0, 1, 'cube')
-data.setCell(0, 2, 'tesngScripts.FactorialDemo')
-data.setCell(0, 3, 4);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'factorial')
-data.setCell(1, 2, 'tesngScripts.FactorialDemo')
-data.setCell(1, 3, 0);
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+data.setCell(0, 2, 'testcases.TC_08_ReOrder')
+data.setCell(0, 3, 9386);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-<<<<<<< HEAD
-              <span class="suite-total-time">Total running time: 2 seconds</span>
-=======
-              <span class="suite-total-time">Total running time: 4 ms</span>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -297,7 +207,6 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-<<<<<<< HEAD
               <span class="reporter-method-name">re_Order</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Login button is clicked</span>
@@ -306,12 +215,28 @@ return data;
                 <span class="reporter-method-output">clicked on Login button</span>
                 <span class="reporter-method-output">Clicked on email name</span>
                 <span class="reporter-method-output">Orders selcted from the options</span>
-                <span class="reporter-method-output">Total number of orders placer are:34</span>
-=======
-              <span class="reporter-method-name">cube</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Cube of the Given number is :729</span>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+                <span class="reporter-method-output">Order Number: 1015245</span>
+                <span class="reporter-method-output">Order Number: 1015241</span>
+                <span class="reporter-method-output">Order Number: 1015229</span>
+                <span class="reporter-method-output">Order Number: 1015227</span>
+                <span class="reporter-method-output">Order Number: 1015218</span>
+                <span class="reporter-method-output">Order Number: 1015215</span>
+                <span class="reporter-method-output">Order Number: 1015210</span>
+                <span class="reporter-method-output">Order Number: 997868</span>
+                <span class="reporter-method-output">Order Number: 997042</span>
+                <span class="reporter-method-output">Order Number: 997040</span>
+                <span class="reporter-method-output">Order details button is clicked</span>
+                <span class="reporter-method-output">Re-Order button is clicked</span>
+                <span class="reporter-method-output">Terms of service check-box is checked</span>
+                <span class="reporter-method-output">Checkout button is clicked</span>
+                <span class="reporter-method-output">Continue button is clicked agter saving billing information</span>
+                <span class="reporter-method-output">Continue button is clicked</span>
+                <span class="reporter-method-output">Shipping method radio button is selected</span>
+                <span class="reporter-method-output">Continue button clicked after selecting shipping method</span>
+                <span class="reporter-method-output">Continue buton clicked after selecting payment method</span>
+                <span class="reporter-method-output">Contine button clicked to save payment information</span>
+                <span class="reporter-method-output">Confirm button is clicked to confirm order</span>
+                <span class="reporter-method-output">Order number: 1015634</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -329,45 +254,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-<<<<<<< HEAD
-              <div class="chronological-class-name">testcases.Tc_09_AllOrdersTotal</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testcases.TC_08_ReOrder</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
-=======
-              <div class="chronological-class-name">tesngScripts.FactorialDemo</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">beforeTest</span>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
                 <span class="method-start">0 ms</span>
-<<<<<<< HEAD
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">openBrowser</span>
-                <span class="method-start">693 ms</span>
+                <span class="method-start">813 ms</span>
               </div> <!-- configuration-method before -->
-=======
-              </div> <!-- configuration-test before -->
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
               <div class="test-method">
-<<<<<<< HEAD
                 <span class="method-name">re_Order</span>
-                <span class="method-start">4585 ms</span>
-=======
-                <span class="method-name">cube</span>
-                <span class="method-start">20 ms</span>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+                <span class="method-start">6783 ms</span>
               </div> <!-- test-method -->
-<<<<<<< HEAD
-=======
-              <div class="test-method">
-                <span class="method-name">factorial</span>
-                <span class="method-start">26 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-test after">
-                <span class="method-name">afterTest</span>
-                <span class="method-start">28 ms</span>
-              </div> <!-- configuration-test after -->
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
