--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,30 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<<<<<<< HEAD
-<td>testcases.Tc_09_AllOrdersTotal</td>
-=======
-<td>tesngScripts.FactorialDemo</td>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
+<td>testcases.TC_08_ReOrder</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
 <td>re_Order</td>
 <td>&nbsp;</td></tr>
-=======
-<td>factorial</td>
-<td>RegressionTest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>cube</td>
-<td>SanityTest RegressionTest </td>
-</tr>
->>>>>>> branch 'main' of https://github.com/automationcatalogue/SeleniumLearning.git
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
