--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>RegressionTest</td><td>FactorialDemo.factorial()[pri:0, instance:tesngScripts.FactorialDemo@20ccf40b]<br/>FactorialDemo.cube()[pri:0, instance:tesngScripts.FactorialDemo@20ccf40b]<br/></td></tr>
-<tr><td>SanityTest</td><td>FactorialDemo.cube()[pri:0, instance:tesngScripts.FactorialDemo@20ccf40b]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
