--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\AaradhyaVashisht\AppData\Local\Temp\testng-eclipse-2099994117\testng-customsuite.xml</span>
+                    <span>C:\Users\rehan\AppData\Local\Temp\testng-eclipse--673689478\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testcases.TC_00_LoginOrangeHRM" class="method navigator-link" hash-for-method="login_OrangeHRM">login_OrangeHRM</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testcases.TC_07_DemoWebShop_PlaceOrder" class="method navigator-link" hash-for-method="placeOrder_DemoWebshop">placeOrder_DemoWebshop</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -122,25 +122,28 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">testcases.TC_00_LoginOrangeHRM</span>
+              <span class="class-name">testcases.TC_07_DemoWebShop_PlaceOrder</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="login_OrangeHRM">
-                  </a> <!-- login_OrangeHRM -->
-                  <span class="method-name">login_OrangeHRM</span>
-                  <div class="stack-trace">org.testng.TestNGException: 
-Parameter &apos;username&apos; is required by @Test on method login_OrangeHRM but has not been marked @Optional or defined
-in C:\Users\AaradhyaVashisht\AppData\Local\Temp\testng-eclipse-2099994117\testng-customsuite.xml
-	at org.testng.internal.Parameters.createParams(Parameters.java:270)
-	at org.testng.internal.Parameters.createParametersForMethod(Parameters.java:358)
-	at org.testng.internal.Parameters.createParameters(Parameters.java:700)
-	at org.testng.internal.Parameters.handleParameters(Parameters.java:884)
-	at org.testng.internal.Parameters.handleParameters(Parameters.java:740)
-	at org.testng.internal.ParameterHandler.handleParameters(ParameterHandler.java:59)
-	at org.testng.internal.ParameterHandler.createParameters(ParameterHandler.java:38)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:791)
+                  <a name="placeOrder_DemoWebshop">
+                  </a> <!-- placeOrder_DemoWebshop -->
+                  <span class="method-name">placeOrder_DemoWebshop</span>
+                  <div class="stack-trace">java.lang.Error: Unresolved compilation problem: 
+	The method openBrowser(String) in the type Register is not applicable for the arguments ()
+
+	at testcases.Login.login(Login.java:30)
+	at testcases.TC_07_DemoWebShop_PlaceOrder.placeOrder_DemoWebshop(TC_07_DemoWebShop_PlaceOrder.java:17)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:567)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
 	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
 	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
 	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
@@ -169,7 +172,7 @@ in C:\Users\AaradhyaVashisht\AppData\Local\Temp\testng-eclipse-2099994117\testng
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\AaradhyaVashisht\AppData\Local\Temp\testng-eclipse-2099994117\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rehan\AppData\Local\Temp\testng-eclipse--673689478\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -178,7 +181,7 @@ in C:\Users\AaradhyaVashisht\AppData\Local\Temp\testng-eclipse-2099994117\testng
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testcases.TC_00_LoginOrangeHRM&quot;/&gt;
+      &lt;class name=&quot;testcases.TC_07_DemoWebShop_PlaceOrder&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,14 +223,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'login_OrangeHRM')
-data.setCell(0, 2, 'testcases.TC_00_LoginOrangeHRM')
-data.setCell(0, 3, 0);
+data.setCell(0, 1, 'placeOrder_DemoWebshop')
+data.setCell(0, 2, 'testcases.TC_07_DemoWebShop_PlaceOrder')
+data.setCell(0, 3, 773);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 0 ms</span>
+              <span class="suite-total-time">Total running time: 773 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -238,6 +241,12 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">placeOrder_DemoWebshop</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Path of the Project is :C:\Users\rehan\git\SeleniumLearning</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -253,16 +262,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testcases.TC_00_LoginOrangeHRM</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setup</span>
+              <div class="chronological-class-name">testcases.TC_07_DemoWebShop_PlaceOrder</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">placeOrder_DemoWebshop</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- test-method -->
               <div class="configuration-class after">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">tearDown</span>
-                <span class="method-start">417 ms</span>
+                <span class="method-name">afterClass</span>
+                <span class="method-start">780 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
