--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,2 @@
-<h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\AaradhyaVashisht\git\SeleniumLearning</td></tr>
+<h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\rehan\git\SeleniumLearning</td></tr>
 </table>
