--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,41 +4,29 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testcases.TC_00_LoginOrangeHRM</td>
+<td>testcases.TC_07_DemoWebShop_PlaceOrder</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>login_OrangeHRM</td>
+<td>placeOrder_DemoWebshop</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>setup</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>openBrowser</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>logout</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDown</td>
+<td>afterClass</td>
 <td>&nbsp;</td></tr>
 </table>
