--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7194ba">  <td>21/09/20 09:06:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_00_LoginOrangeHRM.setup()[pri:0, instance:testcases.TC_00_LoginOrangeHRM@22ef9844]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/20 09:06:18</td>   <td>412</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_00_LoginOrangeHRM.tearDown()[pri:0, instance:testcases.TC_00_LoginOrangeHRM@22ef9844]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/20 08:54:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_07_DemoWebShop_PlaceOrder.afterClass()[pri:0, instance:testcases.TC_07_DemoWebShop_PlaceOrder@10feca44]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1095088856</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/20 08:54:28</td>   <td>-782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_07_DemoWebShop_PlaceOrder.placeOrder_DemoWebshop()[pri:0, instance:testcases.TC_07_DemoWebShop_PlaceOrder@10feca44]">placeOrder_DemoWebshop</td> 
+  <td>main@1095088856</td>   <td></td> </tr>
 </table>
