Allorderstotal test case updated

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,4 +1,4 @@
-<h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\AaradhyaVashisht\git\SeleniumLearning</td></tr>
+<h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\rehan\git\SeleniumLearning</td></tr>
 <tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
 <tr><td>Login button is clicked</td></tr>
 <tr><td>Email Id is entered</td></tr>
