--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7194ba">  <td>21/09/21 21:54:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tc_09_AllOrdersTotal.allorders_total()[pri:0, instance:testcases.Tc_09_AllOrdersTotal@2fb3536e]">allorders_total</td> 
-  <td>main@14183023</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/21 21:53:57</td>   <td>-3883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tc_09_AllOrdersTotal.openBrowser(java.lang.String)[pri:0, instance:testcases.Tc_09_AllOrdersTotal@2fb3536e]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
-<tr bgcolor="7194ba">  <td>21/09/21 21:53:56</td>   <td>-4331</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tc_09_AllOrdersTotal.setup()[pri:0, instance:testcases.Tc_09_AllOrdersTotal@2fb3536e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@14183023</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/21 19:04:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tc_09_AllOrdersTotal.allorders_total()[pri:0, instance:testcases.Tc_09_AllOrdersTotal@1da2cb77]">allorders_total</td> 
+  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/21 19:04:26</td>   <td>-4105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tc_09_AllOrdersTotal.openBrowser(java.lang.String)[pri:0, instance:testcases.Tc_09_AllOrdersTotal@1da2cb77]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/21 19:04:25</td>   <td>-4892</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tc_09_AllOrdersTotal.setup()[pri:0, instance:testcases.Tc_09_AllOrdersTotal@1da2cb77]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
 </table>
