Changes made to test cases

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,20 +1,13 @@
-<h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\AaradhyaVashisht\git\SeleniumLearning</td></tr>
-<tr><td>Orange HRM website is loaded</td></tr>
+<h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\rehan\git\SeleniumLearning</td></tr>
+<tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
+<tr><td>Airbnb website is loaded</td></tr>
 <tr><td>Browser window is maximized</td></tr>
-<tr><td>userName is entered in the text-box</td></tr>
-<tr><td>password is entered in the text-box</td></tr>
-<tr><td>Login button is clicked</td></tr>
-<tr><td>Admin menu is clicked</td></tr>
-<tr><td>User Management option is clicked</td></tr>
-<tr><td>Useres option is clicked</td></tr>
-<tr><td>Edit user option is clicked</td></tr>
-<tr><td>New password is entered </td></tr>
-<tr><td>Confirm password is entered </td></tr>
-<tr><td>Save button is clicked</td></tr>
-<tr><td>Logout dropdown is clicked</td></tr>
-<tr><td>Logout is selected from the dropdown</td></tr>
-<tr><td>Adella is entered as UserName in a text-box</td></tr>
-<tr><td>abcd@123 is entered as Password in a text-box</td></tr>
-<tr><td>Login button is clicked</td></tr>
-<tr><td>Browser is closed</td></tr>
+<tr><td>Accepted the cookies</td></tr>
+<tr><td>Location is clicked </td></tr>
+<tr><td>I’m flexible button is clicked</td></tr>
+<tr><td>Search results are displayed</td></tr>
+<tr><td>Guests dropdown is clicked</td></tr>
+<tr><td>No of adults selected from filter : 2</td></tr>
+<tr><td>Saved selection</td></tr>
+<tr><td>Filters button is clicked</td></tr>
 </table>
