--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testcases.TC_02_ChangePassword</td>
+<td>testcases.TC_11_AirbnbValidation</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>change_password</td>
+<td>priceRangeFilter</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -35,6 +35,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterClass</td>
+<td>close_browser</td>
 <td>&nbsp;</td></tr>
 </table>
