--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8f6f80">  <td>21/09/23 08:46:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_02_ChangePassword.afterClass()[pri:0, instance:testcases.TC_02_ChangePassword@3b6ddd1d]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@769432223</td>   <td></td> </tr>
-<tr bgcolor="8f6f80">  <td>21/09/23 08:45:44</td>   <td>-34768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_ChangePassword.change_password()[pri:0, instance:testcases.TC_02_ChangePassword@3b6ddd1d]">change_password</td> 
-  <td>main@769432223</td>   <td></td> </tr>
-<tr bgcolor="8f6f80">  <td>21/09/23 08:45:43</td>   <td>-35850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_02_ChangePassword.openBrowser()[pri:0, instance:testcases.TC_02_ChangePassword@3b6ddd1d]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@769432223</td>   <td></td> </tr>
-<tr bgcolor="8f6f80">  <td>21/09/23 08:45:42</td>   <td>-36292</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_02_ChangePassword.setup()[pri:0, instance:testcases.TC_02_ChangePassword@3b6ddd1d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@769432223</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/23 21:09:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_11_AirbnbValidation.close_browser()[pri:0, instance:testcases.TC_11_AirbnbValidation@2f217633]">&lt;&lt;close_browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/23 21:09:01</td>   <td>-11101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_11_AirbnbValidation.openBrowser(java.lang.String)[pri:0, instance:testcases.TC_11_AirbnbValidation@2f217633]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/23 21:09:03</td>   <td>-9505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_11_AirbnbValidation.priceRangeFilter()[pri:0, instance:testcases.TC_11_AirbnbValidation@2f217633]">priceRangeFilter</td> 
+  <td>main@1946988038</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/23 21:09:01</td>   <td>-11122</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_11_AirbnbValidation.setup()[pri:0, instance:testcases.TC_11_AirbnbValidation@2f217633]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
 </table>
