Airbnb testcase fixed

--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,21 +1,71 @@
 <h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\rehan\git\SeleniumLearning</td></tr>
 <tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
-<tr><td>Airbnb website is loaded</td></tr>
-<tr><td>Browser window is maximized</td></tr>
-<tr><td>Accept cookies button is clicked</td></tr>
-<tr><td>Location is clicked </td></tr>
-<tr><td>I’m flexible button is clicked</td></tr>
-<tr><td>Search results are displayed</td></tr>
-<tr><td>Guests dropdown is clicked</td></tr>
-<tr><td>Number of adults selected from filter : 2</td></tr>
-<tr><td>Save button is clicked</td></tr>
-<tr><td>Filters button is clicked</td></tr>
-<tr><td>Employee details page is displayed</td></tr>
-<tr><td>Entire place checkbox is selected</td></tr>
-<tr><td>Hotel room checkbox is selected</td></tr>
-<tr><td>Airbnb switch is already disabled</td></tr>
-<tr><td>Final Actual max price is :34708</td></tr>
-<tr><td>Final actual min price is 3718</td></tr>
-<tr><td>Number of bedrooms set to one</td></tr>
-<tr><td>Show listings button is clicked</td></tr>
+<tr><td>Website is successfully loaded</td></tr>
+<tr><td>Browser window maximized</td></tr>
+<tr><td>Login button is clicked</td></tr>
+<tr><td>Email Id is entered</td></tr>
+<tr><td>Password is entered</td></tr>
+<tr><td>Login button is clicked</td></tr>
+<tr><td>Email name is clicked</td></tr>
+<tr><td>Orders selcted from the options</td></tr>
+<tr><td>Order Number: 1024426</td></tr>
+<tr><td>Order Number: 1024425</td></tr>
+<tr><td>Order Number: 1024423</td></tr>
+<tr><td>Order Number: 1024421</td></tr>
+<tr><td>Order Number: 1024420</td></tr>
+<tr><td>Order Number: 1024419</td></tr>
+<tr><td>Order Number: 1024418</td></tr>
+<tr><td>Order Number: 1024416</td></tr>
+<tr><td>Order Number: 1024415</td></tr>
+<tr><td>Order Number: 1023488</td></tr>
+<tr><td>Order Number: 1023487</td></tr>
+<tr><td>Order Number: 1023483</td></tr>
+<tr><td>Order Number: 1023482</td></tr>
+<tr><td>Order Number: 1023474</td></tr>
+<tr><td>Order Number: 1023473</td></tr>
+<tr><td>Order Number: 1023464</td></tr>
+<tr><td>Order Number: 1023463</td></tr>
+<tr><td>Order Number: 1023457</td></tr>
+<tr><td>Order Number: 1023455</td></tr>
+<tr><td>Order Number: 1022998</td></tr>
+<tr><td>Order Number: 1022555</td></tr>
+<tr><td>Order Number: 1022519</td></tr>
+<tr><td>Order Number: 1020329</td></tr>
+<tr><td>Order Number: 1020125</td></tr>
+<tr><td>Order Number: 1020124</td></tr>
+<tr><td>Order Number: 1020123</td></tr>
+<tr><td>Order Number: 1020122</td></tr>
+<tr><td>Order Number: 1020120</td></tr>
+<tr><td>Order Number: 1020119</td></tr>
+<tr><td>Order Number: 1019271</td></tr>
+<tr><td>Order Number: 1019270</td></tr>
+<tr><td>Order Number: 1018414</td></tr>
+<tr><td>Order Number: 1018413</td></tr>
+<tr><td>Order Number: 1017523</td></tr>
+<tr><td>Order Number: 1015634</td></tr>
+<tr><td>Order Number: 1015633</td></tr>
+<tr><td>Order Number: 1015245</td></tr>
+<tr><td>Order Number: 1015241</td></tr>
+<tr><td>Order Number: 1015229</td></tr>
+<tr><td>Order Number: 1015227</td></tr>
+<tr><td>Order Number: 1015218</td></tr>
+<tr><td>Order Number: 1015215</td></tr>
+<tr><td>Order Number: 1015210</td></tr>
+<tr><td>Order Number: 997868</td></tr>
+<tr><td>Order Number: 997042</td></tr>
+<tr><td>Order Number: 997040</td></tr>
+<tr><td>Order details button is clicked</td></tr>
+<tr><td>Re-Order button is clicked</td></tr>
+<tr><td>Terms of service check-box is clicked</td></tr>
+<tr><td>Checkout button is clicked</td></tr>
+<tr><td>Continue button is clicked after saving billing information</td></tr>
+<tr><td>Continue button is clicked</td></tr>
+<tr><td>Shipping method radio button is clicked</td></tr>
+<tr><td>Continue button clicked after selecting shipping method</td></tr>
+<tr><td>Continue buton is clicked after selecting payment method</td></tr>
+<tr><td>Contine button is clicked to save payment information</td></tr>
+<tr><td>Confirm button is clicked to confirm order</td></tr>
+<tr><td>Order number: 1025095</td></tr>
+<tr><td>Successfully logged out of the browser</td></tr>
+<tr><td>Browser is successfully closed</td></tr>
 </table>
