--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "https://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="https://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <title>TestNG Report</title>
@@ -7,45 +7,12 @@
 </head>
 <body>
 <table>
-<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">13,243</td><td></td><td></td></tr>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">17,927</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TC_11_AirbnbValidation</td><td><a href="#m0">priceRangeFilter</a></td><td rowspan="1">1632587251803</td><td rowspan="1">11378</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.TC_08_ReOrder</td><td><a href="#m0">re_Order</a></td><td rowspan="1">1633125301174</td><td rowspan="1">12758</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testcases.TC_11_AirbnbValidation#priceRangeFilter</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Airbnb website is loaded<br/>Browser window is maximized<br/>Accept cookies button is clicked<br/>Location is clicked <br/>I’m flexible button is clicked<br/>Search results are displayed<br/>Guests dropdown is clicked<br/>Number of adults selected from filter : 2<br/>Save button is clicked<br/>Filters button is clicked<br/>Employee details page is displayed<br/>Entire place checkbox is selected<br/>Hotel room checkbox is selected<br/>Airbnb switch is already disabled<br/>Final Actual max price is :34708<br/>Final actual min price is 3718<br/>Number of bedrooms set to one<br/>Show listings button is clicked</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.StringIndexOutOfBoundsException: begin 1, end 0, length 0
-	at java.base/java.lang.String.checkBoundsBeginEnd(String.java:3751)
-	at java.base/java.lang.String.substring(String.java:1907)
-	at java.base/java.lang.String.substring(String.java:1880)
-	at testcases.TC_11_AirbnbValidation.priceRangeFilter(TC_11_AirbnbValidation.java:157)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:567)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-	at org.testng.TestRunner.privateRun(TestRunner.java:794)
-	at org.testng.TestRunner.run(TestRunner.java:596)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testcases.TC_08_ReOrder#re_Order</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Login button is clicked<br/>Email Id is entered<br/>Password is entered<br/>Login button is clicked<br/>Email name is clicked<br/>Orders selcted from the options<br/>Order Number: 1024426<br/>Order Number: 1024425<br/>Order Number: 1024423<br/>Order Number: 1024421<br/>Order Number: 1024420<br/>Order Number: 1024419<br/>Order Number: 1024418<br/>Order Number: 1024416<br/>Order Number: 1024415<br/>Order Number: 1023488<br/>Order Number: 1023487<br/>Order Number: 1023483<br/>Order Number: 1023482<br/>Order Number: 1023474<br/>Order Number: 1023473<br/>Order Number: 1023464<br/>Order Number: 1023463<br/>Order Number: 1023457<br/>Order Number: 1023455<br/>Order Number: 1022998<br/>Order Number: 1022555<br/>Order Number: 1022519<br/>Order Number: 1020329<br/>Order Number: 1020125<br/>Order Number: 1020124<br/>Order Number: 1020123<br/>Order Number: 1020122<br/>Order Number: 1020120<br/>Order Number: 1020119<br/>Order Number: 1019271<br/>Order Number: 1019270<br/>Order Number: 1018414<br/>Order Number: 1018413<br/>Order Number: 1017523<br/>Order Number: 1015634<br/>Order Number: 1015633<br/>Order Number: 1015245<br/>Order Number: 1015241<br/>Order Number: 1015229<br/>Order Number: 1015227<br/>Order Number: 1015218<br/>Order Number: 1015215<br/>Order Number: 1015210<br/>Order Number: 997868<br/>Order Number: 997042<br/>Order Number: 997040<br/>Order details button is clicked<br/>Re-Order button is clicked<br/>Terms of service check-box is clicked<br/>Checkout button is clicked<br/>Continue button is clicked after saving billing information<br/>Continue button is clicked<br/>Shipping method radio button is clicked<br/>Continue button clicked after selecting shipping method<br/>Continue buton is clicked after selecting payment method<br/>Contine button is clicked to save payment information<br/>Confirm button is clicked to confirm order<br/>Order number: 1025095<br/>Successfully logged out of the browser</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
