--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="82d682">  <td>21/10/07 08:49:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_05_DemoWebShop_Register.setup()[pri:0, instance:testcases.TC_05_DemoWebShop_Register@62010f5c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415289182</td>   <td></td> </tr>
-<tr bgcolor="82d682">  <td>21/10/07 08:49:38</td>   <td>1015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_05_DemoWebShop_Register.openBrowser(java.lang.String)[pri:0, instance:testcases.TC_05_DemoWebShop_Register@62010f5c]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1415289182</td>   <td></td> </tr>
-<tr bgcolor="82d682">  <td>21/10/07 08:49:44</td>   <td>7036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05_DemoWebShop_Register.register()[pri:0, instance:testcases.TC_05_DemoWebShop_Register@62010f5c]">register</td> 
-  <td>main@1415289182</td>   <td></td> </tr>
-<tr bgcolor="82d682">  <td>21/10/07 08:49:51</td>   <td>14625</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_05_DemoWebShop_Register.teardown()[pri:0, instance:testcases.TC_05_DemoWebShop_Register@62010f5c]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1415289182</td>   <td></td> </tr>
+<tr bgcolor="857a66">  <td>21/10/12 08:38:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_07_DemoWebShop_PlaceOrder.setup()[pri:0, instance:testcases.TC_07_DemoWebShop_PlaceOrder@15713d56]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1648232591</td>   <td></td> </tr>
+<tr bgcolor="857a66">  <td>21/10/12 08:38:02</td>   <td>617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_07_DemoWebShop_PlaceOrder.openBrowser(java.lang.String)[pri:0, instance:testcases.TC_07_DemoWebShop_PlaceOrder@15713d56]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1648232591</td>   <td></td> </tr>
+<tr bgcolor="857a66">  <td>21/10/12 08:38:06</td>   <td>5002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_07_DemoWebShop_PlaceOrder.placeOrder_DemoWebshop()[pri:0, instance:testcases.TC_07_DemoWebShop_PlaceOrder@15713d56]">placeOrder_DemoWebshop</td> 
+  <td>main@1648232591</td>   <td></td> </tr>
+<tr bgcolor="857a66">  <td>21/10/12 08:38:32</td>   <td>30460</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_07_DemoWebShop_PlaceOrder.afterClass()[pri:0, instance:testcases.TC_07_DemoWebShop_PlaceOrder@15713d56]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1648232591</td>   <td></td> </tr>
 </table>
