--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,5 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>DemoWebShop Login is successful</td></tr>
+<tr><td>Selected the Books Category</td></tr>
+<tr><td>Items are added into the Cart</td></tr>
+<tr><td>All Shopping Bag actions are performed</td></tr>
+</table>
