--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,7 +1,18 @@
-<h2>Reporter output</h2><table><tr><td>DemoWebShop Login is successful</td></tr>
+<h2>Reporter output</h2><table><tr><td>UserName is :Admin Password is :Admin@123</td></tr>
+<tr><td>UserName is :aaliyah.haq Password is :Test@1234</td></tr>
+<tr><td>UserName is :Adella Password is :abcd@123</td></tr>
+<tr><td>UserName is :alice Password is :Admin@1234</td></tr>
+<tr><td>onFinish Method is executed: OrangeHRM</td></tr>
+<tr><td>onTestSuccess Method is executed: register</td></tr>
+<tr><td>onTestSuccess Method is executed: login_DemoWebShop_DataProvider</td></tr>
+<tr><td>onTestSuccess Method is executed: login_DemoWebShop_DataProvider</td></tr>
+<tr><td>onTestSuccess Method is executed: login_DemoWebShop_DataProvider</td></tr>
+<tr><td>onTestSuccess Method is executed: login_DemoWebShop_DataProvider</td></tr>
+<tr><td>DemoWebShop Login is successful</td></tr>
 <tr><td>Selected the Books Category</td></tr>
 <tr><td>Items are added into the Cart</td></tr>
-<tr><td>All Shopping Bag actions are performed</td></tr>
-<tr><td>All Checkout page actions are performed</td></tr>
-<tr><td>Logout is Successful</td></tr>
+<tr><td>onTestSuccess Method is executed: re_Order</td></tr>
+<tr><td>onTestSuccess Method is executed: allorders_total</td></tr>
+<tr><td>onFinish Method is executed: DemoWebShop</td></tr>
+<tr><td>onTestSuccess Method is executed: priceRangeFilter</td></tr>
 </table>
